# phosphoros

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/libkdb/: bit.hpp  error.hpp  ksyscall.cpp  ksyscall.hpp  libkdb.hpp  pipe.hpp  process.hpp  register.inc  register_info.hpp  register_ref.inc  registers.hpp  types.hpp
src/: CMakeLists.txt  libkdb.cpp  pipe.cpp  process.cpp  registers.cpp
test/: CMakeLists.txt  target.cpp  target.out  target2.cpp  target2.out  test.cpp  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  kdb.cpp  kdb.out
